--- a/static/main.css
+++ b/static/main.css
@@ -53,3 +53,18 @@
 	color: #E74C3C;
 	background-color: white;
 }
+
+.msgdiv{
+	margin: 8px 4px;
+}
+
+#footer{
+	position: absolute;
+	bottom: 0px;
+	width: 100%;
+	height: 40px;
+	background-color: #f5f5f5;
+	margin-top: 20px;
+	text-align: center;
+	padding-top: 10px;
+}
