--- a/static/main.css
+++ b/static/main.css
@@ -3,6 +3,12 @@
 		margin-left: 40px;
 }
 
+.box-main {
+	width: 420px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .media-base{
 	display:block;
 	width: 140px;
@@ -59,7 +65,6 @@
 }
 
 #footer{
-	position: absolute;
 	bottom: 0px;
 	width: 100%;
 	height: 40px;
@@ -67,4 +72,9 @@
 	margin-top: 20px;
 	text-align: center;
 	padding-top: 10px;
+}
+
+.new-h2 {
+	margin-top: 16px;
+	margin-bottom: 20px;
 }
