--- a/static/main.css
+++ b/static/main.css
@@ -1,4 +1,6 @@
-* {text-decoration:none;}
+/* a {text-decoration:none;}
+a:hover {text-decoration:none;} */
+
 #matrix {
 		margin-left: 40px;
 }
@@ -27,6 +29,8 @@
 .matrix-1:hover{
 	color: #1ABC9C;
 	background-color: white;
+	border: 1px solid #1ABC9C;
+	text-decoration:none;
 }
 
 .matrix-2{
@@ -37,6 +41,8 @@
 .matrix-2:hover{
 	color: #34495E;
 	background-color: white;
+	border: 1px solid #34495E;
+	text-decoration:none;
 }
 
 .matrix-3{
@@ -47,6 +53,8 @@
 .matrix-3:hover{
 	color: #2ECC71;
 	background-color: white;
+	border: 1px solid #2ECC71;
+	text-decoration:none;
 }
 
 .matrix-4{
@@ -58,6 +66,8 @@
 .matrix-4:hover{
 	color: #E74C3C;
 	background-color: white;
+	border: 1px solid #E74C3C;
+	text-decoration:none;
 }
 
 .msgdiv{
